Fixed bugs and improved code (close #4353)